Se creó la opcion de activar y desactivar usuarios

--- a/E-Food Project/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/E-Food Project/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -11,6 +11,18 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+
+
+                <div class="row mb-2 mt-2">
+                    <div class="form-group col-md-6">
+                        <label>Pregunta de seguridad</label>
+                        <div id="Id" class="form-control">
+                            @Model.User.Identity.Name
+                        </div>
+                    </div>
+                </div>
+            
+
             <div class="form-floating mb-3">
                 <input asp-for="Input.SecurityAnswer" class="form-control" autocomplete="username" aria-required="true" />
                 <label asp-for="Input.SecurityAnswer" class="form-label"></label>
