--- a/E-Food Project/Areas/Admin/Views/User/Index.cshtml
+++ b/E-Food Project/Areas/Admin/Views/User/Index.cshtml
@@ -22,6 +22,7 @@
     <table id="tblData" class="table table-responsive table-hover">
         <thead class="table-dark">
             <tr>
+                <th>Email</th>
                 <th>Nombre</th>
                 <th>rol</th>
                 <th> </th>
