Se creo lo relacionado con el procesador de pago

--- a/E-Food Project/Views/Shared/_Layout.cshtml
+++ b/E-Food Project/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" asp-area="Admin" asp-controller="Card" asp-action="Index">Tarjetas</a></li>
+                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="PaymentProcessor" asp-action="Index">Procesadores de pago</a></li>
                             </ul>
                         </li>
 
