Crud Product listo

--- a/E-Food Project/Areas/Admin/Views/Product/Index.cshtml
+++ b/E-Food Project/Areas/Admin/Views/Product/Index.cshtml
@@ -21,9 +21,8 @@
             <tr>
                 <th>ID</th>
                 <th>Nombre</th>
-                <th>Descripción</th>
-                <th>Linea de Comida</th>
-
+                <th>Descripcion</th>
+<th>Linea de Comida</th>
                 <th></th>
             </tr>
         </thead>
