--- a/E-Food Project/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/E-Food Project/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -14,7 +14,7 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
 
-            <div class="row mb-3 mt-2">
+            <div class="row mb-3">
                 <div class="form-group col-md-6">
                     <label>Pregunta de seguridad</label>
                     <div class="form-control">
