--- a/E-Food Project/Areas/Admin/Views/ProductPrice/Upsert.cshtml
+++ b/E-Food Project/Areas/Admin/Views/ProductPrice/Upsert.cshtml
@@ -22,7 +22,6 @@
             <div class="col-8">
                 <div class="container">
 
-                    <input asp-for="ProductPrice.ProductId" type="hidden" value="@Model.ProductPrice.ProductId" />
 
                     <div class="row">
                         <div class="col-md-6">
@@ -36,7 +35,7 @@
 
                     <div class="row">
                         <div class="col-md-6">
-                            <label>Nombre</label>
+                            <label>Precio</label>
                             <input type="number" asp-for="ProductPrice.Amount" class="form-control" placeholder="Precio"/>
                         </div>
                     </div>
