--- a/E-Food Project/Views/Shared/_Layout.cshtml
+++ b/E-Food Project/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                                 <li><a class="dropdown-item" asp-area="Admin" asp-controller="Card" asp-action="Index">Tarjetas</a></li>
                                 <li><a class="dropdown-item" asp-area="Admin" asp-controller="PaymentProcessor" asp-action="Index">Procesadores de pago</a></li>
                                 <li><a class="dropdown-item" asp-area="Admin" asp-controller="FoodLine" asp-action="Index">Lineas de comida</a></li>
-                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Tipos de productos</a></li>
+                                <li><a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Productos</a></li>
                             </ul>
                         </li>
 
