Carro de compra implementado y recoleccion de datos del cliente, con Brandon y Sigifredo

--- a/E-Food Project/Views/Shared/_Layout.cshtml
+++ b/E-Food Project/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
                         @if (httpContextAccessor.HttpContext.Session.GetInt32(DS.ssShoppingCart) != null)
                         {
                             <li>
-                                <a asp-area="Inventario" asp-controller="Cart" asp-action="Index" class="nav-link">
+                                <a asp-area="Inventory" asp-controller="Cart" asp-action="Index" class="nav-link">
                                     @{
                                         var productAmount = httpContextAccessor.HttpContext.Session.GetInt32(DS.ssShoppingCart);
                                     }
