--- a/E-Food Project/Areas/Inventory/Views/Home/Index.cshtml
+++ b/E-Food Project/Areas/Inventory/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
                     <div class="card w-100 my-2">
                         <img src="@DS.ImagesPath@product.Image" class="card-img-top" style="aspect-ratio: 1 / 1" />
                         <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">@product.Description</h5>
+                            <h5 class="card-title">@product.Name</h5>
                             <div class="card-footer d-flex align-items-end pt-3 px-0 pb-0 mt-auto bg-white">
                                 <a asp-action="Detail" asp-route-id="@product.Id" class="btn btn-outline-primary">
                                     <i class="bi bi-tags-fill"></i> Detalle
