--- a/E-Food Project/Areas/Inventory/Views/Cart/Proceed.cshtml
+++ b/E-Food Project/Areas/Inventory/Views/Cart/Proceed.cshtml
@@ -50,30 +50,19 @@
                                         <input asp-for="Order.Adress" id="adressInput" type="text" class="form-control" />
                                     </div>
                                 </div>
+
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <label>Tiquete de descuento</label>
+                                        <select asp-for="Discount" id="discountInput"  asp-items="@Model.DescountTikets" class="form-select">
+                                            <option disabled selected>-- Seleccione Tiquete de Descuento --</option>
+                                        </select>
+                                        <span asp-validation-for="Discount" class="text-danger"></span>
+                                    </div>
+                                </div>
                                 
                             </div>
-                            <div class="col-12 col-lg-5 offset-lg-1">
-                                <h4 class="d-flex justify-content-between align-items-center mb-3">
-                                    <span class="text-success">Productos:</span>
-                                </h4>
-                                <ul class="list-group mb-3">
-                                    @foreach (var item in Model.ShoppingCartList)
-                                    {
-                                        <li class="list-group-item d-flex justify-content-between">
-                                            <div>
-                                                <h6 class="my-0">@item.Product.Description</h6>
-                                                <small class="text-muted">Cantidad: @item.Amount</small>
-                                            </div>
-                                            <span class="text-muted">₡ @(item.Price * item.Amount)</span>
-                                        </li>
-                                    }
-
-                                    <li class="list-group-item d-flex justify-content-between bg-light">
-                                        <strong class="text-success">Total (COL)</strong>
-                                        <strong class="text-success">₡@(Model.Order.Amount)</strong>
-                                    </li>
-                                </ul>
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
@@ -104,9 +93,11 @@
         var clientNameInput = document.getElementById('clientNameInput').value;
         var phoneNumberInput = document.getElementById('phoneNumberInput').value;
         var adressInput = document.getElementById('adressInput').value;
+        var discountInput = document.getElementById('discountInput').value;
+
 
         // Redireccionar al controlador con el tipo de pago seleccionado
-        window.location.href = '/Inventory/Cart/SetInformation?clientName=' + clientNameInput + '&phoneNumber=' + phoneNumberInput + '&adress=' + adressInput;
+        window.location.href = '/Inventory/Cart/SetInformation?clientName=' + clientNameInput + '&phoneNumber=' + phoneNumberInput + '&adress=' + adressInput + '&discount=' + discountInput;
     });
 </script>
 
